Fixing slight misalignment of deploy status

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -630,7 +630,7 @@ button.sidebar-open
 		color: $status-rejected
 
 	.deploy-status-text
-		padding: 3px 0 0 25px
+		padding: 2px 0 0 20px
 		display: inline-block
 		font-style: italic
 
